# zellij-statusline

./: Cargo.toml  README.md
src/: clock.rs  main.rs  segment.rs  tabs.rs
