[package]
name = "zellij-statusline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.4"
chrono = "0.4.31"
chrono-tz = "0.8.3"
lazy_static = "1.4.0"
strip-ansi-escapes = "0.2.0"
unicode-segmentation = "1.10.1"
zellij-tile = "0.38.2"
